Fixing overflow-y

--- a/frontend-user/styles/styles.css
+++ b/frontend-user/styles/styles.css
@@ -6,7 +6,6 @@
     margin: 0;
     box-sizing: border-box;
     font-family: 'Montserrat', sans-serif;
-    overflow-y: hidden;
 }
 
 /*general*/
@@ -54,6 +53,10 @@
     justify-content: space-between;
     align-items: center;
     min-width: 500px; 
+}
+
+#login-container div {
+    overflow-y: hidden;
 }
 
 h1 {
@@ -153,4 +156,13 @@ h1 {
 /*SIGNUP*/
 .signup-container {
     background-image: url('../assets/hero2.jpg') !important;
+}
+
+/*NAVBAR*/
+nav {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 80px;
+    background-color: black;
 }
